Fixing up minor things
Didn't realise my style for the forms were overlapping other form on different pages sorry~

--- a/client/src/css/acc/parent/parent.css
+++ b/client/src/css/acc/parent/parent.css
@@ -1,11 +1,3 @@
-/* Styles for the body of the document */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
-
 /* Styles for the main content container */
 .Contents {
   width: 80%;
