--- a/client/src/css/acc/teacher/teacher.css
+++ b/client/src/css/acc/teacher/teacher.css
@@ -35,8 +35,7 @@
   margin-bottom: 20px;
 }
 
-/* Form styling */
-form {
+.classrooms-section  {
   background-color: #9dbbd6;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -45,6 +44,7 @@ form {
   width: 100%;
   max-width: 500px;
   margin-bottom: 20px;
+
 }
 
 /* Form input fields */
@@ -113,3 +113,17 @@ button:hover {
 .review-form-section, h3{
   color: #18232e;
 }
+
+/* Fixing form to only style specific ones */
+.assignments-section, .student-review{
+  background-color: #9dbbd6;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+  text-align: left;
+  width: 100%;
+  max-width: 500px;
+  margin-bottom: 20px;
+}
+
+
